[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["mateusu <mateus.amendonca@ufpe.br>"]
readme = "README.md"
packages = [{ include = "bookstore" }]

[tool.poetry.dependencies]
python = ">=3.13"
django = ">=5.2.1,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
whitenoise = ">=6.9.0,<7.0.0"
djangorestframework-simplejwt = ">=5.5.0,<6.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
factory-boy = ">=3.3.3,<4.0.0"
flake8 = "^7.2.0"
python-dotenv = "^1.0.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
